change to Java 12